# veil

./: .gitignore  .gitmodules  README.md  package.json
backend/: .env.template  .gitignore  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: server.js  server.ts  watchTower.ts
backend/src/db/: dbAccess.ts  dbQueries.ts
backend/src/types/: customTypes.ts
cli/: Cargo.toml  README.md  package-lock.json  package.json  runner.sh
cli/src/: abi.json  erc20.rs  index.ts  main.rs  rescue.rs  watchtower.rs
contracts/: foundry.toml  remappings.txt
contracts/src/: Rescue.sol
forge-contracts/: foundry.toml  remappings.txt
forge-contracts/src/: Rescue.sol
forge-contracts/src/test/: Rescue.t.sol
forge-contracts/src/test/base/: BaseTest.sol
frontend/: package-lock.json  package.json
frontend/pages/: _app.tsx  index.js  index.tsx  new.tsx
frontend/pages/api/: form.js
frontend/styles/: globals.css
package/contracts/cache/: solidity-files-cache.json
package/contracts/src/: Recovery.sol
package/contracts/test/: Recovery.t.sol
src/: index.ts
