[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = {version = "0.17.0", features = ["abigen"]}
serde_json = "1.0.84"
anyhow = "1.0.56"
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
